Commenting out extra logging for now. Trying to track down comms issue

--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -1467,7 +1467,7 @@ page = 15
       wueRates2              = array,  U08,       110, [10],    "%",        5.0,       0.0,  0.0,    1225,    0
       crankingEnrichValues2  = array,  U08,       120,  [4],    "%",        10.0,      0.0,    0,    2550,    0 ; Values for the secondary cranking enrichment curve
       primePulse2            = array,  U08,       124,  [4],    "ms",       0.5,       0.0,  0.0,   127.5,    1
-      Unused15_128_175       = array,  U08,       128, [47],    "%",        1.0,       0.0,  0.0,     255,    0
+      Unused15_128_175       = array,  U08,       128, [48],    "%",        1.0,       0.0,  0.0,     255,    0
 
 ;-------------------------------------------------------------------------------
       boostTable2            = array,  U08,       176, [8x8], { bitStringValue( boostTableLabels, boostType ) },        2.0,        0.0,     0,    {boostTableLimit},      0
@@ -5245,7 +5245,7 @@ cmdVSSratio6 =      "E\x99\x06"
   ; you change it.
 
   ochGetCommand    = "r\$tsCanId\x30%2o%2c"
-  ochBlockSize     =  135
+  ochBlockSize     =  127
 
   secl             = scalar, U08,  0, "sec",    1.000, 0.000
   status1          = scalar, U08,  1, "bits",   1.000, 0.000
@@ -5400,10 +5400,10 @@ cmdVSSratio6 =      "E\x99\x06"
     airConFanStatus   = bits,     U08,    124,  [6:6]
     airConUnusedBits  = bits,    U08,    124,  [7:7]
   dwellActual       = scalar,   U16,    125, "ms",     0.001, 0.000
-  warmupEnrich2     = scalar,   U16,    127, "%",      1.000, 0.000
-  warmupEnrich      = scalar,   U16,    129, "%",      1.000, 0.000
-  ASEValue2         = scalar,   U16,    131, "%",      1.000, 0.000
-  ASECurr           = scalar,   U16,    133, "%",      1.000, 0.000
+  ; warmupEnrich2     = scalar,   U16,    127, "%",      1.000, 0.000
+  ; warmupEnrich      = scalar,   U16,    129, "%",      1.000, 0.000
+  ; ASEValue2         = scalar,   U16,    131, "%",      1.000, 0.000
+  ; ASECurr           = scalar,   U16,    133, "%",      1.000, 0.000
    ;sd_filenum       = scalar,   U16,    125, "", 1, 0
    ;sd_error         = scalar,   U08,    127, "", 1, 0
    ;sd_phase         = scalar,   U08,    128, "", 1, 0
