Corrected unused memory allocation

--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -1469,13 +1469,13 @@ page = 15
       primePulse2            = array,  U08,    124,  [4],    "ms",       0.5,       0.0,  0.0,   127.5,    1
       CLTboostLimits         = array,  U08,    128,  [6],   "kPa",       2.0,       0.0,  0.0,   511.0,    0
       CLTboostCutEnabled     = bits,   U08,    134,[0:0],   "Off",      "On"
-      Unused15_1             = bits,   U08,    134,[1:1],   "Off",      "On"
-      Unused15_2             = bits,   U08,    134,[2:2],   "Off",      "On"
-      Unused15_3             = bits,   U08,    134,[3:3],   "Off",      "On"
-      Unused15_4             = bits,   U08,    134,[4:4],   "Off",      "On"
-      Unused15_5             = bits,   U08,    134,[5:5],   "Off",      "On"
-      Unused15_6             = bits,   U08,    134,[6:6],   "Off",      "On"
-      Unused15_7             = bits,   U08,    134,[7:7],   "Off",      "On"
+      Unused15_134_1         = bits,   U08,    134,[1:1],   "Off",      "On"
+      Unused15_134_2         = bits,   U08,    134,[2:2],   "Off",      "On"
+      Unused15_134_3         = bits,   U08,    134,[3:3],   "Off",      "On"
+      Unused15_134_4         = bits,   U08,    134,[4:4],   "Off",      "On"
+      Unused15_134_5         = bits,   U08,    134,[5:5],   "Off",      "On"
+      Unused15_134_6         = bits,   U08,    134,[6:6],   "Off",      "On"
+      Unused15_134_7         = bits,   U08,    134,[7:7],   "Off",      "On"
   
       Unused15_135_255       = array,  U08,    135, [121],    "%",       1.0,       0.0,  0.0,     255,    0
 
