--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -1473,10 +1473,17 @@ page = 15
       airConUnused4                 = bits,    U08,   95,  [6:7], "0", "1", "2", "3"
       airConIdleUpRPMAdder          = scalar,  U08,   96,  "Added Target RPM", 10.0, 0.0, 0.0,    250.0,    0
       airConPwmFanMinDuty           = scalar,  U08,   97,  "%",      0.5,        0.0,     0.0,    100.0,    1
-
+      
       rollingProtRPMDelta           = array,   S08,   98,    [4], "RPM",     10.0,    0,   -1000,   0,    0           
       rollingProtCutPercent         = array,   U08,   102,   [4],    "%",    1.0,    0,   0,    100,      0
-      Unused15_106_255              = array,   U08,   106,   [150],   "%", 1.0,   0.0,     0.0,      255,    0
+
+      Unused15_106_133              = array,   U08,   106,   [27],   "%", 1.0,   0.0,     0.0,      255,    0
+
+      Unused15_134_1                = bits,    U08,   134,   [0:2],  "False", "INVALID","INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID"
+      iacPWMfanUp                   = bits,    U08,   134,   [3:5],  "0", "1", "2", "3", "4", "5", "6", "7"
+      Unused15_134_2                = bits,    U08,   134,   [6:7],  "False", "INVALID","INVALID", "INVALID"
+
+      Unused15_135_255              = array,   U08,   135,   [120],  "%", 1.0,   0.0,     0.0,      255,    0
 
 ;-------------------------------------------------------------------------------
 
@@ -2142,6 +2149,7 @@ menuDialog = main
   idleAdvAlgorithm  = "Use Throttle position sensor (TPS) or closed throttle position sensor (CTPS) to detect idle state."
   idleAdvDelay      = "The number of seconds after sync is achieved before the idle advance control begins"
   idleAdvStartDelay = "The number of seconds after matching settings before the idle advance control begins"
+  iacPWMfanUp       = "PWM DC% added to base DC% when fan is on."
 
   oddfire2          = "The ATDC angle of channel 2 for oddfire engines. This is relative to the TDC angle of channel 1"
   oddfire3          = "The ATDC angle of channel 3 for oddfire engines. This is relative to the TDC angle of channel 1 (NOT channel 2)"
@@ -2839,6 +2847,7 @@ menuDialog = main
       field = "Idle valve frequency", idleFreq,                 { iacAlgorithm == 2 || iacAlgorithm == 3 || iacAlgorithm == 6 }
       field = "Idle valve direction", iacPWMdir,                { iacAlgorithm == 2 || iacAlgorithm == 3 || iacAlgorithm == 6 }
       field = "Run before start",     iacPWMrun,                { iacAlgorithm == 2 || iacAlgorithm == 3 || iacAlgorithm == 6 }
+      field = "Fan on DC increase (idle up)", iacPWMfanUp,      { iacAlgorithm == 2 || iacAlgorithm == 6 }
 
     dialog = closedloop_idle, "Closed loop Idle"
       displayOnlyField = "#                      !!! Please note that 1.0 means 100% !!!"
